--- a/App/estilos.css
+++ b/App/estilos.css
@@ -9,18 +9,16 @@ body {
     overflow-x: hidden; /* Oculta la barra de desplazamiento horizontal si hay */
     overflow-y: visible; /* Muestra la barra de desplazamiento vertical si es necesario */
     background: linear-gradient(to right, #ff5f6d, #ffc371, #48c6ef);
+    background-size: 300% 100%; /* Ajusta el tamaño del fondo para permitir el movimiento */
     animation: degradadoMovimiento 10s ease infinite;
 }
 
 @keyframes degradadoMovimiento {
-    0% {
+    0%, 100% {
         background-position: 0% 50%;
     }
     50% {
         background-position: 100% 50%;
-    }
-    100% {
-        background-position: 0% 50%;
     }
 }
 
