--- a/App/estilos.css
+++ b/App/estilos.css
@@ -1,16 +1,18 @@
 body {
     font-family: 'Arial', sans-serif;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    justify-content: flex-start;
     align-items: center;
     height: 100vh;
     margin: 0;
     position: relative;
-    overflow-x: hidden; /* Oculta la barra de desplazamiento horizontal si hay */
-    overflow-y: visible; /* Muestra la barra de desplazamiento vertical si es necesario */
+    overflow-x: hidden;
+    overflow-y: auto;
     background: linear-gradient(to right, #ff5f6d, #ffc371, #48c6ef);
-    background-size: 300% 100%; /* Ajusta el tamaño del fondo para permitir el movimiento */
+    background-size: 300% 100%;
     animation: degradadoMovimiento 10s ease infinite;
+    box-sizing: border-box;
 }
 
 @keyframes degradadoMovimiento {
@@ -22,55 +24,118 @@ body {
     }
 }
 
-/* Estilo del contenedor de las pestañas */
 .tab {
     display: flex;
     justify-content: center;
     align-items: center;
     overflow: hidden;
-    background-color: #000; /* Fondo negro */
+    background-color: #000;
     padding: 0;
     margin: 0;
-    position: fixed; /* Hace que el contenedor de las pestañas sea fijo */
-    top: 0; /* Alinea el contenedor en la parte superior de la página */
-    width: 100%; /* Asegura que el contenedor se extienda a lo ancho de la página */
-    z-index: 1000; /* Asegura que el contenedor se muestre por encima de otros elementos */
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1000;
 }
 
-/* Estilo de los botones de las pestañas */
 .tab button {
-    background-color: inherit; /* Hereda el color de fondo del contenedor */
-    border: none; /* Elimina el borde */
-    outline: none; /* Elimina el contorno al hacer clic */
-    cursor: pointer; /* Cambia el cursor a un puntero */
-    padding: 14px 16px; /* Espaciado interno */
-    transition: background-color 0.3s ease; /* Suaviza la transición de color */
-    color: white; /* Color del texto */
+    background-color: inherit;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 14px 16px;
+    transition: background-color 0.3s ease;
+    color: white;
 }
 
-/* Cambia el color de fondo de las pestañas al pasar el mouse */
 .tab button:hover {
-    background-color: #575757; /* Color de fondo al pasar el mouse */
+    background-color: #575757;
 }
 
-/* Estilo para la pestaña activa */
 .tab button.active {
-    background-color: #4CAF50; /* Color de fondo de la pestaña activa */
-    color: white; /* Color del texto */
+    background-color: #4CAF50;
+    color: white;
 }
 
-/* Estilo del contenido de las pestañas */
 .tabcontent {
-    display: none; /* Oculta el contenido inicialmente */
-    padding: 6px 12px; /* Espaciado interno */
-    border: 1px solid #ccc; /* Borde */
-    border-top: none; /* Elimina el borde superior */
+    display: none;
+    padding: 60px 12px 12px;
+    width: 100%;
+    box-sizing: border-box;
+    flex-grow: 1;
 }
 
-/* Estilo de las imágenes dentro de los botones de las pestañas */
+.search-container {
+    margin-bottom: 20px;
+    width: 100%;
+    max-width: 600px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+input[type="text"] {
+    width: calc(100% - 22px);
+    padding: 10px;
+    margin-bottom: 10px;
+    box-sizing: border-box;
+    border: 2px solid #ccc;
+    border-radius: 4px;
+    font-size: 16px;
+}
+
+.button-container {
+    display: flex;
+    justify-content: center; /* Centro los botones */
+    width: 100%;
+}
+
+button {
+    padding: 10px;
+    margin: 0 5px; /* Añade margen a los lados para espaciar los botones */
+    background-color: #48ff00cc;
+    color: rgb(0, 0, 0);
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    font-size: 16px;
+}
+
+button:hover {
+    background-color: #45a049;
+}
+
+.results-container {
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+    box-sizing: border-box;
+    margin-bottom: 5px;
+}
+
+.column {
+    flex: 1;
+    max-width: 49%;
+}
+
+iframe {
+    border-radius: 10px;
+    width: 100%;
+    height: 402px;
+    margin-bottom: 5px;
+}
+
+#trackResults {
+    width: 100%;
+    max-width: 1320px;
+    box-sizing: border-box;
+    margin-bottom: 20px;
+}
+
 .tab button img {
-    height: 24px; /* Altura fija para todas las imágenes */
-    width: 24px; /* Anchura fija para todas las imágenes */
-    vertical-align: middle; /* Alinea verticalmente las imágenes con el texto */
-    margin-right: 8px; /* Espacio a la derecha de la imagen */
+    height: 24px;
+    width: 24px;
+    vertical-align: middle;
+    margin-right: 8px;
 }
